--- a/10122099.ipynb
+++ b/10122099.ipynb
@@ -13,22 +13,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c6196d0d",
+   "metadata": {},
+   "source": [
+    "Tahap 1: Import Pustaka"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d06e83ea",
+   "id": "e952e6d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import numpy as np\n",
-    "\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d9c109e",
+   "metadata": {},
+   "source": [
+    "Tahap 2: Menampilkan Video"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d06e83ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file_vid = cv2.VideoCapture('Test.mp4')\n",
     "\n",
     "while True:\n",
     "    berhasil, bingkai = file_vid.read()\n",
     "    if not berhasil:\n",
     "        break\n",
-    "    cv2.imshow('Video', bingkai)\n",
+    "    cv2.imshow('Video Asli', bingkai)\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
     "\n",
@@ -41,12 +65,12 @@
    "id": "accf1725",
    "metadata": {},
    "source": [
-    "==="
+    "Tahap 3: Praproses (Resize)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9d300ae1",
    "metadata": {},
    "outputs": [
@@ -54,22 +78,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FPS Video: 0.0\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFPS Video: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfps\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m berhasi, bingkai \u001b[38;5;241m=\u001b[39m file_vid\u001b[38;5;241m.\u001b[39mread()\n\u001b[1;32m----> 4\u001b[0m tinggi, lebar \u001b[38;5;241m=\u001b[39m \u001b[43mbingkai\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m[:\u001b[38;5;241m2\u001b[39m]\n\u001b[0;32m      6\u001b[0m skala \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m50\u001b[39m\n\u001b[0;32m      7\u001b[0m lebar_vid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(lebar \u001b[38;5;241m*\u001b[39m skala \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m100\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
+      "FPS Video: 60.017705214911956\n"
      ]
     }
    ],
    "source": [
+    "file_vid = cv2.VideoCapture('Test.mp4')\n",
+    "\n",
     "fps = file_vid.get(cv2.CAP_PROP_FPS)\n",
     "print(f\"FPS Video: {fps}\")\n",
     "berhasi, bingkai = file_vid.read()\n",
@@ -83,7 +98,18 @@
     "\n",
     "while True:\n",
     "    berhasi, bingkai = file_vid.read()\n",
-    "    if not berhasi: bg"
+    "    if not berhasi:\n",
+    "        file_vid.set(cv2.CAP_PROP_POS_FRAMES, 0)\n",
+    "        continue\n",
+    "    ukuran = cv2.resize(bingkai, (lebar_vid, tinggi_vid))\n",
+    "\n",
+    "    cv2.imshow('Video Berubah Ukuran', ukuran)\n",
+    "\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "file_vid.release()\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
