add grayscale preprocessing

--- a/10122099.ipynb
+++ b/10122099.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e952e6d4",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d06e83ea",
    "metadata": {},
    "outputs": [],
@@ -65,12 +65,12 @@
    "id": "accf1725",
    "metadata": {},
    "source": [
-    "Tahap 3: Praproses (Resize)"
+    "Tahap 3: Praproses (Resize & Grayscale)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9d300ae1",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,9 @@
     "        continue\n",
     "    ukuran = cv2.resize(bingkai, (lebar_vid, tinggi_vid))\n",
     "\n",
-    "    cv2.imshow('Video Berubah Ukuran', ukuran)\n",
+    "    vid_abu = cv2.cvtColor(ukuran, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    cv2.imshow('Video Berubah Ukuran & Grayscale', vid_abu)\n",
     "\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
