add preprocessing func & preview each grid

--- a/10122099.ipynb
+++ b/10122099.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "e952e6d4",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "55cdee29",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "id": "9f2d6839",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def praproses(bingkai, skala=50):\n",
+    "    ukuran = cv2.resize(bingkai, (int(bingkai.shape[1] * skala / 100), int(bingkai.shape[0] * skala / 100)))\n",
+    "    vid_abu = cv2.cvtColor(ukuran, cv2.COLOR_BGR2GRAY)\n",
+    "    return vid_abu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "d06e83ea",
    "metadata": {},
    "outputs": [],
@@ -83,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "9d300ae1",
    "metadata": {},
    "outputs": [
@@ -101,11 +114,6 @@
     "fps = file_vid.get(cv2.CAP_PROP_FPS)\n",
     "print(f\"FPS Video: {fps}\")\n",
     "berhasil, bingkai = file_vid.read()\n",
-    "tinggi, lebar = bingkai.shape[:2]\n",
-    "\n",
-    "skala = 50\n",
-    "lebar_vid = int(lebar * skala / 100)\n",
-    "tinggi_vid = int(tinggi * skala / 100)\n",
     "\n",
     "delay = int (500 / fps)\n",
     "\n",
@@ -114,11 +122,10 @@
     "    if not berhasil:\n",
     "        file_vid.set(cv2.CAP_PROP_POS_FRAMES, 0)\n",
     "        continue\n",
-    "    ukuran = cv2.resize(bingkai, (lebar_vid, tinggi_vid))\n",
+    "    \n",
+    "    vid_praproses = praproses(bingkai)\n",
     "\n",
-    "    vid_abu = cv2.cvtColor(ukuran, cv2.COLOR_BGR2GRAY)\n",
-    "\n",
-    "    cv2.imshow('Video Berubah Ukuran & Grayscale', vid_abu)\n",
+    "    cv2.imshow('Video Berubah Ukuran & Grayscale', vid_praproses)\n",
     "\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
@@ -137,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "5b68f942",
    "metadata": {},
    "outputs": [],
@@ -145,11 +152,6 @@
     "file_vid = cv2.VideoCapture(video)\n",
     "\n",
     "berhasil, bingkai = file_vid.read()\n",
-    "tinggi, lebar = bingkai.shape[:2]\n",
-    "\n",
-    "skala = 50\n",
-    "lebar_vid = int(lebar * skala / 100)\n",
-    "tinggi_vid = int(tinggi * skala / 100)\n",
     "\n",
     "prev_gray = None\n",
     "frame_diff = []\n",
@@ -159,11 +161,10 @@
     "    if not berhasil:\n",
     "        break\n",
     "\n",
-    "    ukuran = cv2.resize(bingkai, (lebar_vid, tinggi_vid))\n",
-    "    vid_abu = cv2.cvtColor(ukuran, cv2.COLOR_BGR2GRAY)\n",
+    "    vid_praproses = praproses(bingkai)\n",
     "\n",
     "    if prev_gray is not None:\n",
-    "        diff = cv2.absdiff(vid_abu, prev_gray)\n",
+    "        diff = cv2.absdiff(vid_praproses, prev_gray)\n",
     "        _, thresh = cv2.threshold(diff, 25, 255, cv2.THRESH_BINARY)\n",
     "\n",
     "        score = np.sum(thresh) / 255\n",
@@ -171,7 +172,7 @@
     "\n",
     "        cv2.imshow('Frame Differencing', thresh)\n",
     "\n",
-    "    prev_gray = vid_abu.copy()\n",
+    "    prev_gray = vid_praproses.copy()\n",
     "\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "ea424763",
    "metadata": {},
    "outputs": [],
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "7bf0db8d",
    "metadata": {},
    "outputs": [],
@@ -223,8 +224,8 @@
     "file_vid = cv2.VideoCapture(video)\n",
     "\n",
     "berhasil, bingkai = file_vid.read()\n",
-    "tinggi, lebar = bingkai.shape[:2]\n",
     "\n",
+    "tinggi, lebar = bingkai.shape[:2]\n",
     "skala = 50\n",
     "lebar_vid = int(lebar * skala / 100)\n",
     "tinggi_vid = int(tinggi * skala / 100)\n",
@@ -241,11 +242,10 @@
     "    if not berhasil:\n",
     "        break \n",
     "\n",
-    "    ukuran = cv2.resize(bingkai, (lebar_vid, tinggi_vid))\n",
-    "    vid_abu = cv2.cvtColor(ukuran, cv2.COLOR_BGR2GRAY)\n",
+    "    vid_praproses = praproses(bingkai)\n",
     "\n",
     "    if prev_gray is not None:\n",
-    "        diff = cv2.absdiff(vid_abu, prev_gray)\n",
+    "        diff = cv2.absdiff(vid_praproses, prev_gray)\n",
     "        _, motion_mask = cv2.threshold(diff, 25, 1, cv2.THRESH_BINARY)\n",
     "\n",
     "        timestamp += 1\n",
@@ -253,14 +253,14 @@
     "        mhi[motion_mask == 0] -= 1\n",
     "        mhi[mhi < (timestamp-durasi)] = 0\n",
     "\n",
-    "        mhi_disp = np.uint8(np.clip((mhi - (timestamp- durasi)) / durasi * 255, 0, 255))\n",
+    "        mhi_disp = np.uint8(np.clip((mhi - (timestamp - durasi)) / durasi * 255, 0, 255))\n",
     "\n",
     "        mhi_vector = grid_pooling(mhi_disp, grid=(4, 4))\n",
     "        fitur_mhi.append(mhi_vector)\n",
     "\n",
     "        cv2.imshow('MHI', mhi_disp)\n",
     "\n",
-    "    prev_gray = vid_abu.copy()\n",
+    "    prev_gray = vid_praproses.copy()\n",
     "\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "id": "e5bf6837",
    "metadata": {},
    "outputs": [],
@@ -301,12 +301,11 @@
     "    if not berhasil:\n",
     "        break\n",
     "\n",
-    "    ukuran = cv2.resize(bingkai, (lebar_vid, tinggi_vid))\n",
-    "    vid_abu = cv2.cvtColor(ukuran, cv2.COLOR_BGR2GRAY)\n",
+    "    vid_praproses = praproses(bingkai)\n",
     "\n",
     "    if prev_gray is not None:\n",
     "        # Frame Differencing\n",
-    "        diff = cv2.absdiff(vid_abu, prev_gray)\n",
+    "        diff = cv2.absdiff(vid_praproses, prev_gray)\n",
     "        _, thresh = cv2.threshold(diff, 25, 255, cv2.THRESH_BINARY)\n",
     "        diff_bgr = cv2.cvtColor(thresh, cv2.COLOR_GRAY2BGR)\n",
     "\n",
@@ -322,7 +321,7 @@
     "        gabung = np.hstack((diff_bgr, mhi_bgr))\n",
     "        cv2.imshow('Gabungan Frame Diff + MHI', gabung)\n",
     "\n",
-    "    prev_gray = vid_abu.copy()\n",
+    "    prev_gray = vid_praproses.copy()\n",
     "\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
@@ -877,6 +876,50 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b91fbba1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_vid = cv2.VideoCapture(video)\n",
+    "grid_index = 15\n",
+    "\n",
+    "grid_rows, grid_cols = 4, 4\n",
+    "h_step = tinggi_vid // grid_rows\n",
+    "w_step = lebar_vid // grid_cols\n",
+    "\n",
+    "while True:\n",
+    "    berhasil, bingkai = file_vid.read()\n",
+    "    if not berhasil:\n",
+    "        break\n",
+    "\n",
+    "    vid_praproses = praproses(bingkai, skala)\n",
+    "\n",
+    "    row = (grid_index - 1) // grid_cols\n",
+    "    col = (grid_index - 1) % grid_cols\n",
+    "\n",
+    "    grid_frame = vid_praproses[row * h_step:(row + 1) * h_step,\n",
+    "                                col * w_step:(col + 1) * w_step]\n",
+    "\n",
+    "    cv2.imshow(f'Grid {grid_index}', grid_frame)\n",
+    "\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "    \n",
+    "file_vid.release()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2596e8fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
